# transaction-service/src/main/java/com/bank/transaction/dto/DailyReportResponse.java
@@ -1,13 +1,0 @@
-package com.bank.transaction.dto;
-
-import lombok.AllArgsConstructor;
-import lombok.Data;
-
-@Data
-@AllArgsConstructor
-public class DailyReportResponse {
-
-    private Integer totalTransactions;
-
-    private Double totalAmount;
-}
