# transaction-service/src/main/java/com/bank/transaction/dto/DailyTransactionReportResponse.java
@@ -1,13 +1,0 @@
-package com.bank.transaction.dto;
-
-import lombok.AllArgsConstructor;
-import lombok.Data;
-
-@Data
-@AllArgsConstructor
-public class DailyTransactionReportResponse {
-
-    private Integer totalTransactions;
-
-    private Double totalAmount;
-}
