# transaction-service/src/main/java/com/bank/transaction/dto/FundTransferRequest.java
@@ -1,13 +1,0 @@
-package com.bank.transaction.dto;
-
-import lombok.Data;
-
-@Data
-public class FundTransferRequest {
-
-    private String fromAccount;
-
-    private String toAccount;
-
-    private Double amount;
-}
