# transaction-service/src/main/java/com/bank/transaction/dto/UpdateKycRequest.java
@@ -1,13 +1,0 @@
-package com.bank.transaction.dto;
-
-import lombok.Data;
-
-@Data
-public class UpdateKycRequest {
-
-    private Long customerId;
-
-    private String mobile;
-
-    private String email;
-}
